--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,61 @@
-.main-container{
+.headerLinks {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #132639;
+    width: 1400px
+    
+}
+.headerLinks div{
+    border: 1px ;
+    margin: 20px;
+    margin-top: 1px;
+    margin-bottom: 1px;
+    padding: 5px 10px;
+    background-color: #132639;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    color: white;
+    font-size: 30px;
+    
+}
+.headerLinks div a {
+    text-decoration: none;
+    color: white;
+}
+.headerLinks .HeaderLogo{
+   margin-right: 250px;
+}
+
+.MainBody {
+    display: flex;
+    align-items: center;
     flex-direction: column;
+    height: 100vh;
 }
-.main-container div {
-    flex: 1;
-    border: 1px solid black;
-    margin: 5px;
+
+.MainBody2{
+    display: flex;
+    align-items: center;
+    background-color: #132639;
+    width: 1400px;
+    padding: 10px 20px;
+    color: white;
+    justify-content: center;
+}
+
+.MainBody2 div {  
+    margin: 20px;
+    margin-top: 100px;
     padding: 10px;
+    border-radius: 5px;
+    width: 300px;
     text-align: center;
+    gap: 50px;
 }
 
-.main-container .one {
-    background-color: rgb(107, 143, 155);
-    padding: 300px;
-}
-
-.main-container .two {
-    background-color: rgb(254, 254, 254);
-    padding: 200px;
-}
-
-.main-container .three {
-    background-color: rgb(204, 204, 204);
-    padding: 200px;
-}
-
-.main-container .four {
-    background-color: rgb(255, 255, 255);
-    padding: 100px;
-}
-
-.main-container .five {
-    background-color: rgb(0, 0, 0);
-    padding: 50px;
+.MainBody2 .mB2Text{
+    margin-left: -270px;
 }
