80% done ready for submission contents: main index (100%) secondary page (0% not needed for submission)

--- a/css/indexStyles.css
+++ b/css/indexStyles.css
@@ -63,7 +63,7 @@
 .MainBody3 {
     display: flex;
     align-items: center;
-    background-color: #d6d6d6;
+    background-color: #f4f4f4;
     width: 1400px;
     padding: 10px 20px;
     color: rgb(0, 0, 0);
@@ -83,12 +83,81 @@
 }
 .mB3Text {
     font-size: 30px;     
-    border: #d6d6d6 20px solid;
-    border-top: #d6d6d6 60px solid;
-    border-bottom: 20px solid #d6d6d6;
+    border: #f4f4f4 20px solid;
+    border-top: #f4f4f4 60px solid;
+    border-bottom: 20px solid #f4f4f4;
     width: 1400px;
     text-align: center;
-    background-color: #d6d6d6;
+    background-color: #f4f4f4;
 }
+
+.MainBody4 {
+    display: flex;
+    align-items: center;
+    background-color: #d6d6d6;
+    width: 1400px;
+    padding: 100px 20px;
+    color: rgb(0, 0, 0);
+    justify-content: center;
+    flex-direction: column;
+    
+    
+}
+
+.MainBody4 .mB4Text {
+    font-size: 30px; 
+    width: 700px;  
+    font-style: italic;
+     
+}
+
+.MainBody4 .mB4Text2 {
+    font-size: 15px;
+    width: 700px;  
+    text-align: right;
+}
+
+.MainBody5{
+    display: flex;
+    align-items: center;
+    background-color: #f4f4f4;
+    width: 1400px;
+    padding: 100px 20px;
+    color: white;
+    justify-content: center;
+}
+
+.MainBody5 .mb5Tab {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    background-color: #0080ff;
+    width: 700px;
+    padding: 20px;
+    border-radius: 5px;
+    gap: 70px;
+    justify-content: center;
+}
+
+.MainBody5 .mb5Text {
+    font-size: 20px; 
+}
+
+.MainBody5 .mb5Text2 {
+    font-size: 15px;
+}
+
+.MainBody5 button {
+    background-color: #0080ff;
+    color: #ffffff;
+    border: 1px solid white;
+    padding: 10px 20px;
+    font-size: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
+
 
 
